--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,15 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
   <ul class="navbar-nav">
     <li class="nav-item active">
-      <a class="nav-link" href="#">Active</a>
+      <a class="nav-link" routerLink="list">Infinite Scroller</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#">Disabled</a>
+      <a class="nav-link" routerLink="movies">Movies</a>
     </li>
   </ul>
 </nav>
 
 <div class="container">
-  <div class="card">
-    <div class="card-header bg-danger text-white">Infinite Scroll for the List Array</div>
-    <div class="card-body">
-      <div class="myPage"  infinite-scroll 
-      (scrolled)="onScrollDown()" [scrollWindow]="false"
-      (scrolledUp)="onScrollUp()">
-        <ul class="list-group">
-          <li *ngFor="let list of listArray" class="list-group-item"> {{list}}</li>
-        </ul>
-      </div>
-    </div> 
-    <div class="card-footer bg-dark text-white">Footer</div>
-  </div>
+  <router-outlet></router-outlet>
 </div>
+
