--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -19,9 +19,9 @@
           
                 </div>
               </div>
-              <div class="row">
+              <div class="row" *ngIf="apiResponse">
           
-                <ng-container *ngIf="apiResponse && apiResponse['Response'] == 'False'; else elseTemplate">
+                <ng-container *ngIf="apiResponse['Response'] == 'False'; else elseTemplate">
           
                   <div class="col-12 text-center">
                     <div class="alert alert-danger" role="alert">
@@ -33,7 +33,6 @@
                 </ng-container>
           
                 <ng-template #elseTemplate>
-                    <div *ngIf="apiResponse">
                         <div class="col-3" *ngFor="let movie of apiResponse['Search']">
           
                             <div class="card" style="margin:5px;">
@@ -44,7 +43,6 @@
                               </div>
                             </div>
                           </div>
-                    </div>
                 </ng-template>
           
               </div>
