updated the google login module

--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -33,7 +33,7 @@
                 </ng-container>
           
                 <ng-template #elseTemplate>
-                        <div class="col-3" *ngFor="let movie of apiResponse['Search']">
+                        <div class="col-lg-3 col-md-3 col-sm-3" *ngFor="let movie of apiResponse['Search']">
           
                             <div class="card" style="margin:5px;">
                               <img class="card-img-top" src="{{movie['Poster']}}">
