--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="movies">Movies</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="login">Login</a>
+    </li>
   </ul>
 </nav>
 
