--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,29 +1,33 @@
-<div class="jumbotron bg-transparent text-center">
-    <div *ngIf="!user" class="card text-center">
-        <h6 class="card-header">
-            Social Login Demo
-        </h6>
-        <div class="card-block">
-            <h4 class="card-title">Not signed in</h4>
-            <p class="card-text">Sign in with</p>
-        </div>
-        <div class="card-block">
-            <button class="btn btn-social-icon btn-google" (click)="signInWithGoogle()"><span
-                    class="fa fa-google"></span> Login</button>
-        </div>
+<div class="container" style="max-width: 550px">
+    <h2 class="text-center mb-5">Angular Login with Google</h2>
+  
+    <div *ngIf="isLoggedin === false">
+      <div>
+        <button type="button"  class="btn btn-success" (click)="loginWithGoogle()">SignIn Google</button>
+        <!-- <asl-google-signin-button  type="button"  class="btn btn-success" (click)="loginWithGoogle()">SignIn Google</asl-google-signin-button> -->
+      </div>
     </div>
-    <div *ngIf="user" class="card text-center">
-        <h6 class="card-header">
-            Social Login Demo
-        </h6>
-        <div class="card-block"></div>
-        <img class="card-img-top img-responsive photo" src="{{ user.photoUrl }}">
-        <div class="card-block">
-            <h4 class="card-title">{{ user.name }}</h4>
-            <p class="card-text">{{ user.email }}</p>
-        </div>
-        <div class="card-block">
-            <button class="btn btn-danger" (click)="signOut()">Sign out</button>
-        </div>
+  
+    <div *ngIf="isLoggedin === true">
+      <div class="form-group">
+        <label>First Name</label>
+        <input type="text" class="form-control" [value]="socialUser.firstName" id="firstname" readonly>
+      </div>
+      <div class="form-group">
+        <label>Last Name</label>
+        <input type="text" class="form-control" [value]="socialUser.lastName" id="lastname" readonly>
+      </div>
+      <div class="form-group">
+        <label>Email</label>
+        <input type="text" class="form-control" [value]="socialUser.email" id="email" readonly>
+      </div>
+      <br/>
+      <button type="button" (click)="logOut()" class="btn btn-primary">Logout from Google</button>
+  
+      
     </div>
-</div>
+  </div>
+
+  <hr/>
+
+  <asl-google-signin-button></asl-google-signin-button>
